Header: added news files for menu-hrefs, but not get this hrefs in brouser

--- a/src/html/all-pages/header-implement.html
+++ b/src/html/all-pages/header-implement.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Title</title>
 </head>
 <body>
-$END$
+
+<section class="header-implement">
+  <ul class="menu-box menu-list3 header-tablet">
+    <li class="menu-item menu-item-back header-tablet">Назад</li>
+    <a href="/crm-implement.html">
+      <li class="menu-item menu-item3 header-tablet">Битрикс24.CRM</li>
+    </a>
+    <a href="/amocrm.html">
+      <li class="menu-item menu-item3 header-tablet">amoCRM</li>
+    </a>
+    <a href="/analysis.html">
+      <li class="menu-item menu-item3 header-tablet">Анализ и оптимизация бизнес-процессов</li>
+    </a>
+    <a href="/automation.html">
+      <li class="menu-item menu-item3 header-tablet">Автоматизация бизнес-процессов</li>
+    </a>
+    <a href="/crm-support.html">
+      <li class="menu-item menu-item3 header-tablet">Поддержка CRM</li>
+    </a>
+  </ul>
+</section>
+
+
 </body>
 </html>
