--- a/src/html/all-pages/header-services.html
+++ b/src/html/all-pages/header-services.html
@@ -6,5 +6,41 @@
 </head>
 <body>
 
+<section class="header-services">
+
+  <ul class="menu-box menu-list2 header-tablet">
+    <li class="menu-item menu-item-back header-tablet">Назад</li>
+
+    <a href="header-websiteDevelopment.html">
+      <li class="menu-item menu-item2 header-tablet">Разработка сайтов
+        <img class="header-menu-item-arrow header-tablet" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+      </li>
+    </a>
+
+    <a href="header-implement.html">
+      <li class="menu-item menu-item2 header-tablet">Внедрение CRM
+        <img class="header-menu-item-arrow header-tablet" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+      </li>
+    </a>
+
+    <a href="header-support.html">
+      <li class="menu-item menu-item2 header-tablet">Техническое сопровождение
+        <img class="header-menu-item-arrow header-tablet" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+      </li>
+    </a>
+
+    <a href="/mobile.html">
+      <li class="menu-item menu-item2 header-tablet">Разработка мобильных игр и приложений</li>
+    </a>
+
+    <a href="/integrations.html">
+      <li class="menu-item menu-item2 header-tablet">Интеграции</li>
+    </a>
+  </ul>
+</section>
+
+
+
+
 </body>
 </html>
