--- a/src/html/all-pages/header-support.html
+++ b/src/html/all-pages/header-support.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Title</title>
 </head>
 <body>
-$END$
+
+<section class="header-support">
+  <ul class="menu-box menu-list3 header-tablet">
+    <li class="menu-item menu-item-back header-tablet">Назад</li>
+    <a href="/maintenance.html">
+      <li class="menu-item menu-item2 header-tablet">Техническое сопровождение CRM</li>
+    </a>
+    <a href="/support.html">
+      <li class="menu-item menu-item2 header-tablet">Техническое сопровождение сайтов</li>
+    </a>
+  </ul>
+</section>
+
+
 </body>
 </html>
