--- a/src/html/all-pages/header-websiteDevelopment.html
+++ b/src/html/all-pages/header-websiteDevelopment.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<section class="website-development">
+<section class="header-websiteDevelopment">
   <ul class="menu-box menu-list3 header-tablet">
     <li class="menu-item menu-item-back header-tablet">Назад</li>
     <a href="/development.html">
