Contacts.scss: added border-top in class .page-title on max-with screen 1024px

--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -35,37 +35,37 @@
 
     <div class="hamburger-menu header-tablet">
       <input id="menu-toggle" type="checkbox" />
-      <label class="menu-btn header-tablet" for="menu-toggle">
+      <label class="menu-btn" for="menu-toggle">
         <span></span>
       </label>
 
-      <ul class="menu-box header-tablet">
-        <li class="menu-item menu-item-back header-tablet">Назад</li>
+      <ul class="menu-box">
+        <li class="menu-item menu-item-back">Назад</li>
 
         <a href="header-services.html">
-          <li class="menu-item header-menu-item-services header-tablet">Услуги
-            <img class="header-menu-item-arrow header-tablet" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+          <li class="menu-item header-menu-item-services">Услуги
+            <img class="header-menu-item-arrow" src="@img/icons/icons.svg#arrow" alt="arrow"/>
           </li>
         </a>
 
         <a href="/cases.html">
-         <li class="menu-item header-tablet">Кейсы</li>
+         <li class="menu-item">Кейсы</li>
         </a>
 
         <a href="/about.html">
-          <li class="menu-item header-tablet">О нас</li>
+          <li class="menu-item">О нас</li>
         </a>
 
         <a href="/specialists.html">
-          <li class="menu-item header-tablet">Cпециалисты</li>
+          <li class="menu-item">Cпециалисты</li>
         </a>
 
         <a href="/blog.html">
-          <li class="menu-item header-tablet">Блог</li>
+          <li class="menu-item">Блог</li>
         </a>
 
         <a href="/contacts.html">
-          <li class="menu-item header-tablet">Контакты</li>
+          <li class="menu-item">Контакты</li>
         </a>
       </ul>
     </div>
