header, app.js :added new functions for lists

--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -38,15 +38,109 @@
       <label class="menu-btn" for="menu-toggle">
         <span></span>
       </label>
-
       <ul class="menu-box">
-        <li class="menu-item menu-item-back">Назад</li>
 
-        <a href="header-services.html">
-          <li class="menu-item header-menu-item-services">Услуги
-            <img class="header-menu-item-arrow" src="@img/icons/icons.svg#arrow" alt="arrow"/>
-          </li>
-        </a>
+
+
+
+
+
+
+
+<!--        <li class="menu-item menu-item-back">Назад</li>-->
+
+
+        <li class="menu-item header-menu-itemServices">Услуги
+          <img class="header-menu-item-arrowTablet arrow-forListServices" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+
+             <ul class="menu-listServices">
+<!--              <li class="menu-item menu-item-back">Назад</li>-->
+
+
+               <li class="menu-item menu-item2 header-menu-itemDev">Разработка сайтов
+                  <img class="header-menu-item-arrowTablet arrow-forListDev" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+
+                  <ul class="menu-listDev">
+<!--                    <li class="menu-item menu-item-back">Назад</li>-->
+                    <a href="/development.html">
+                      <li class="menu-item menu-item3">Создание сайтов</li>
+                    </a>
+                    <a href="/internet-shops.html">
+                      <li class="menu-item menu-item3">Интернет-магазин</li>
+                    </a>
+                    <a href="/1C-integration.html">
+                      <li class="menu-item menu-item3">Интеграция с 1С</li>
+                    </a>
+                    <a href="/support.html">
+                      <li class="menu-item menu-item3">Поддержка сайтов</li>
+                    </a>
+                  </ul>
+
+                </li>
+
+
+               <li class="menu-item menu-item2 header-menu-itemCRM">Внедрение CRM
+                 <img class="header-menu-item-arrowTablet arrow-forListCRM" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+
+                 <ul class="menu-listCRM">
+<!--                   <li class="menu-item menu-item-back">Назад</li>-->
+                   <a href="/crm-implement.html">
+                     <li class="menu-item menu-item3">Битрикс24.CRM</li>
+                   </a>
+                   <a href="/amocrm.html">
+                     <li class="menu-item menu-item3">amoCRM</li>
+                   </a>
+                   <a href="/analysis.html">
+                     <li class="menu-item menu-item3">Анализ и оптимизация бизнес-процессов</li>
+                   </a>
+                   <a href="/automation.html">
+                     <li class="menu-item menu-item3">Автоматизация бизнес-процессов</li>
+                   </a>
+                   <a href="/crm-support.html">
+                     <li class="menu-item menu-item3">Поддержка CRM</li>
+                   </a>
+                 </ul>
+
+               </li>
+
+
+
+               <li class="menu-item menu-item2 header-menu-itemSupport">Техническое сопровождение
+                 <img class="header-menu-item-arrowTablet arrow-forListSupport" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+
+                 <ul class="menu-listSupport">
+<!--                   <li class="menu-item menu-item-back">Назад</li>-->
+                   <a href="/maintenance.html">
+                     <li class="menu-item menu-item2">Техническое сопровождение CRM</li>
+                   </a>
+                   <a href="/support.html">
+                     <li class="menu-item menu-item2">Техническое сопровождение сайтов</li>
+                   </a>
+                 </ul>
+
+               </li>
+
+
+
+
+
+
+
+              <a href="/mobile.html">
+                <li class="menu-item menu-item2">Разработка мобильных игр и приложений</li>
+              </a>
+
+              <a href="/integrations.html">
+                <li class="menu-item menu-item2">Интеграции</li>
+              </a>
+             </ul>
+
+        </li>
+
+
+
+
+
 
         <a href="/cases.html">
          <li class="menu-item">Кейсы</li>
@@ -67,6 +161,7 @@
         <a href="/contacts.html">
           <li class="menu-item">Контакты</li>
         </a>
+
       </ul>
     </div>
 
