Header: Corrected classes and styles for menu swipers

--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -50,15 +50,15 @@
 <!--        <li class="menu-item menu-item-back">Назад</li>-->
 
 
-        <li class="menu-item header-menu-itemServices">Услуги
-          <img class="header-menu-item-arrowTablet arrow-forListServices" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+        <li class="menu-item header-menu-item-services">Услуги
+          <img class="header-menu-item-arrow arrow-forListService" src="@img/icons/icons.svg#arrow" alt="arrow"/>
 
-             <ul class="menu-listServices">
+             <ul class="menu-listService">
 <!--              <li class="menu-item menu-item-back">Назад</li>-->
 
 
-               <li class="menu-item menu-item2 header-menu-itemDev">Разработка сайтов
-                  <img class="header-menu-item-arrowTablet arrow-forListDev" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+               <li class="menu-item header-menu-item-services">Разработка сайтов
+                  <img class="header-menu-item-arrow arrow-forListDev" src="@img/icons/icons.svg#arrow" alt="arrow"/>
 
                   <ul class="menu-listDev">
 <!--                    <li class="menu-item menu-item-back">Назад</li>-->
@@ -79,8 +79,8 @@
                 </li>
 
 
-               <li class="menu-item menu-item2 header-menu-itemCRM">Внедрение CRM
-                 <img class="header-menu-item-arrowTablet arrow-forListCRM" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+               <li class="menu-item header-menu-item-services">Внедрение CRM
+                 <img class="header-menu-item-arrow arrow-forListCRM" src="@img/icons/icons.svg#arrow" alt="arrow"/>
 
                  <ul class="menu-listCRM">
 <!--                   <li class="menu-item menu-item-back">Назад</li>-->
@@ -105,8 +105,8 @@
 
 
 
-               <li class="menu-item menu-item2 header-menu-itemSupport">Техническое сопровождение
-                 <img class="header-menu-item-arrowTablet arrow-forListSupport" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+               <li class="menu-item header-menu-item-services">Техническое сопровождение
+                 <img class="header-menu-item-arrow arrow-forListSupport" src="@img/icons/icons.svg#arrow" alt="arrow"/>
 
                  <ul class="menu-listSupport">
 <!--                   <li class="menu-item menu-item-back">Назад</li>-->
